force-app/main/default/objects/E_MOC_Attachment_Consolidate__c.object
<CustomObject>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>E_MOC_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>E-MOC Application</label>
        <referenceTo>E_MOC_Application__c</referenceTo>
        <relationshipLabel>E-MOC Attachment Consolidate</relationshipLabel>
        <relationshipName>E_MOC_Attachment_Consolidate</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>E_MOC_Checklist_type__c</fullName>
        <label>E-MOC Checklist type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>E_MOC_Doc_Type__c</fullName>
        <label>E-MOC Doc Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>E-MOC Attachment Consolidate</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Consolidate-{0000000}</displayFormat>
        <label>Attachment No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>